Added details about Matilda

--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-<h1>Matilda</h1>
+<!DOCTYPE html>
+<html lang="en-gb">
+    <head>
+        <meta charset="UTF-8">
+        <title>Matilda</title>
+    </head>
+
+    <body>
+        <nav></nav>
+        <h1>Matilda</h1>    
+
+        <div id="bio">
+            <h2>About Matilda</h2>
+            <p>Matilda is a beautiful cat who originated from the streets of Catford.</p>
+            <p>Matilda is a boy cat.</p>
+            <p>Matilda has many interests, few friends and particular enemies.</p>
+        </div>
+
+        <div id="Food">
+            <h2>Matilda's Food</h2>
+            <p>Matilda's favourite food is:</p>
+            <ul>
+                <li>Wet food</li>
+            </ul>
+            <p>Matilda's eating schedule is:</p>
+            <ol>
+                <li>Whenever the human first stirs in the morning or can be seen through the window of the back door</li>
+                <li>Around midday</li>
+                <li>Whenever a human arrives home</li>
+                <li>Whenever a human looks as if they are going to go to sleep</li>
+                <li>As often as possible</li>
+            </ol>
+        </div>
+
+        <div></div>
+    </body>
+</html>
+
