--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Matilda</title>
+        <link rel="stylesheet" type="text/css" href="styles.css" />
     </head>
 
     <body>
@@ -32,7 +33,9 @@
             </ol>
         </div>
 
-        <div></div>
+        <div>
+
+        </div>
     </body>
 </html>
 
