Included name and image section

--- a/index.html
+++ b/index.html
@@ -33,6 +33,27 @@
             </ol>
         </div>
 
+        <div id="names">
+            <h2>Matilda's many names</h2>
+            <p>Matilda is not actually Matilda's official name. He is known to the authorities as Matty. However, this name is not in common usage.</p>
+            <p>There are many alternate, semi-official names that belong to this creature. They include:</p>
+            <ul>
+                <li>Matthew</li>
+                <li>Chubbo</li>
+                <li>Matilda the IV</li>
+                <li>King Chubbo the IV</li>
+                <li>The Boy</li>
+                <li>Ugly Spearmint</li>
+                <li>Boat</li>
+                <li>Baby</li>
+            </ul>
+        </div>
+
+        <image>
+            <img src="matilda-vs-squirrel.jpg"></img>
+            <caption>Matilda and one of his enemies</caption>
+        </image>
+
         <div>
 
         </div>
