--- a/index.html
+++ b/index.html
@@ -4,55 +4,78 @@
         <meta charset="UTF-8">
         <title>Matilda</title>
         <link rel="stylesheet" type="text/css" href="styles.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Reddit+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     </head>
 
     <body>
         <nav></nav>
-        <h1>Matilda</h1>    
+        <h1 class="inter-font">Matilda</h1>    
 
-        <div id="bio">
-            <h2>About Matilda</h2>
-            <p>Matilda is a beautiful cat who originated from the streets of Catford.</p>
-            <p>Matilda is a boy cat.</p>
-            <p>Matilda has many interests, few friends and particular enemies.</p>
+        <main>
+
+        <div class="column">
+
+            <div id="bio">
+                <h2 class="inter-font">About Matilda</h2>
+                <div class="reddit-sans-font">
+                    <p>Matilda is a beautiful cat who originated from the streets of Catford.</p>
+                    <p>Matilda is a boy cat.</p>
+                    <p>Matilda has many interests, few friends and particular enemies.</p>
+                </div>
+            </div>
+
+            <div id="Food">
+                <h2 class="inter-font">Matilda's Food</h2>
+                <div class="reddit-sans-font">
+                <p>Matilda's favourite food is:</p>
+                <ul>
+                    <li>Wet food</li>
+                </ul>
+                <p>Matilda's eating schedule is:</p>
+                <ol>
+                    <li>Whenever the human first stirs in the morning or can be seen through the window of the back door</li>
+                    <li>Around midday</li>
+                    <li>Whenever a human arrives home</li>
+                    <li>Whenever a human looks as if they are going to go to sleep</li>
+                    <li>As often as possible</li>
+                </ol>
+                </div>
+            </div>
+
+            <div id="names">
+                <h2 class="inter-font">Matilda's many names</h2>
+                <div class="reddit-sans-font">
+                <p>Matilda is not actually Matilda's official name. He is known to the authorities as Matty. However, this name is not in common usage. Commonly used names include:</p>
+                <ul>
+                    <li>Matthew</li>
+                    <li>Chubbo</li>
+                    <li>Matilda the IV</li>
+                    <li>King Chubbo the IV</li>
+                    <li>The Boy</li>
+                    <li>Ugly Spearmint</li>
+                    <li>Boat</li>
+                    <li>Baby</li>
+                </ul>
+                </div>
+            </div>
+
+            <div id="buttons">
+                <button id="food">Food</button>
+                <button id="love">Love</button>
+                <button id="sleep">Sleep</button>
+            </div>
         </div>
 
-        <div id="Food">
-            <h2>Matilda's Food</h2>
-            <p>Matilda's favourite food is:</p>
-            <ul>
-                <li>Wet food</li>
-            </ul>
-            <p>Matilda's eating schedule is:</p>
-            <ol>
-                <li>Whenever the human first stirs in the morning or can be seen through the window of the back door</li>
-                <li>Around midday</li>
-                <li>Whenever a human arrives home</li>
-                <li>Whenever a human looks as if they are going to go to sleep</li>
-                <li>As often as possible</li>
-            </ol>
+        <div class="column">
+            <image>
+                <img src="matilda-vs-squirrel.jpg"></img>
+                <caption>Matilda and one of his enemies</caption>
+            </image>
         </div>
 
-        <div id="names">
-            <h2>Matilda's many names</h2>
-            <p>Matilda is not actually Matilda's official name. He is known to the authorities as Matty. However, this name is not in common usage.</p>
-            <p>There are many alternate, semi-official names that belong to this creature. They include:</p>
-            <ul>
-                <li>Matthew</li>
-                <li>Chubbo</li>
-                <li>Matilda the IV</li>
-                <li>King Chubbo the IV</li>
-                <li>The Boy</li>
-                <li>Ugly Spearmint</li>
-                <li>Boat</li>
-                <li>Baby</li>
-            </ul>
-        </div>
-
-        <image>
-            <img src="matilda-vs-squirrel.jpg"></img>
-            <caption>Matilda and one of his enemies</caption>
-        </image>
+        </main>
 
         <div>
 
