Added title colour animation

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="column">
 
             <div id="bio">
-                <h2 class="inter-font">About Matilda</h2>
+                <h2 class="inter-font">About Matilda &#128062</h2>
                 <div class="reddit-sans-font">
                     <p>Matilda is a beautiful cat who originated from the streets of Catford.</p>
                     <p>Matilda is a boy cat.</p>
@@ -27,7 +27,7 @@
             </div>
 
             <div id="Food">
-                <h2 class="inter-font">Matilda's Food</h2>
+                <h2 class="inter-font">Matilda's Food &#127869</h2>
                 <div class="reddit-sans-font">
                 <p>Matilda's favourite food is:</p>
                 <ul>
@@ -45,7 +45,7 @@
             </div>
 
             <div id="names">
-                <h2 class="inter-font">Matilda's many names</h2>
+                <h2 class="inter-font">Matilda's many names &#128220</h2>
                 <div class="reddit-sans-font">
                 <p>Matilda is not actually Matilda's official name. He is known to the authorities as Matty. However, this name is not in common usage. Commonly used names include:</p>
                 <ul>
@@ -70,8 +70,8 @@
 
         <div class="column">
             <image>
-                <img src="matilda-vs-squirrel.jpg"></img>
-                <caption>Matilda and one of his enemies</caption>
+                <img src="matilda-vs-squirrel.jpg" alt="Matilda faces down a squirrel through the window of a conservatory."></img>
+                <caption class="reddit-sans-font">Matilda and one of his enemies</caption>
             </image>
         </div>
 
